syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";

// path from the go.mod filez
option go_package = "RyanFin/GoSimpleBank/pb";

message User {
    string username = 1;
    string full_name = 2;
    string email = 3;
    google.protobuf.Timestamp password_changed_at = 4;
    google.protobuf.Timestamp created_at = 5;
}